<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/study"
        android:onClick="study" />

    <Button
        android:id="@+id/addWord"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addWord"
        android:onClick="addWord" />
    
    <Button
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchWord"
        android:onClick="search" />
    
     <Button
        android:id="@+id/deleteWord"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteWord"
        android:onClick="deleteWord" />

</LinearLayout>