<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Search" >

   <EditText
        android:id="@+id/SearchCardFront"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:hint="@string/enterFront"
        android:inputType="text" >
    </EditText>

    <EditText
        android:id="@+id/SearchCardBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SearchCardFront"
        android:hint="@string/enterBack" >
    </EditText>

    <Button
        android:id="@+id/SearchCardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SearchCardBack"
        android:text="@string/search"
        android:layout_weight="0.5"
        android:onClick="search" >
    </Button>
    
    <Button
        android:id="@+id/SearchCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/SearchCardButton"
        android:layout_below="@+id/SearchCardBack"
        android:text = "@string/cancel" 
        android:layout_weight = "0.50"
        android:onClick="cancel" >
        
        </Button>

</RelativeLayout>