<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    <Button 
        android:id="@+id/create_new_deck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newDeck"
        android:onClick="createNewDeck"
        />
      <Button 
        android:id="@+id/Import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Import"
        android:onClick="importDeck"
        />

    <TextView
        android:id="@+id/deck_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deck_list_title"
        android:textSize="20dp" 
        android:textStyle="bold"
		android:gravity ="center"
        />
    <ListView 
        android:id = "@+id/decklist"
        android:layout_width = "wrap_content"
        android:layout_height="wrap_content"/>
    
</LinearLayout>